syntax = "proto3";

option csharp_namespace = "CloudDrop";

package auth;

service AuthService {
    rpc SignUp (SignUpRequest) returns (TokenResponse);
    rpc SignIn (SignInRequest) returns (TokenResponse);
    rpc Ping (PingMessage) returns (PingMessage);
}

// signup
message SignUpRequest {
    string email = 1;
    string password = 2;
    string name = 3;
}

// signin
message SignInRequest {
    string email = 1;
    string password = 2;
}

message TokenResponse {
    string token = 1;
}
message PingMessage {

}