syntax = "proto3";

option csharp_namespace = "CloudDrop";

package plans;

import "google/protobuf/wrappers.proto";

service PlansService {
  rpc GetAll (GetAllRequest) returns (PlansMessage);
}

message GetAllRequest {
  google.protobuf.Int32Value max = 1;
}

message PlansMessage {
  repeated PlanMessage plans = 1;
}

message PlanMessage {
  int32 id = 1;
  string name = 2;
  string description = 3;
  int64 price = 4;
  int64 available_quote = 5;
  int64 available_speed = 6;
}